--- a/roles/deploy/files/docker-compose.yml
+++ b/roles/deploy/files/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./data/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./data/web:/usr/share/nginx/html:ro
+      - ./data/public:/usr/share/nginx/html
       - ./data/certbot/conf:/etc/letsencrypt:ro
       - ./data/certbot/www:/var/www/certbot:ro
       - ./data/fastdl:/usr/share/nginx/html/fastdl:ro
@@ -14,13 +14,13 @@ services:
       - 80:80
       - 443:443
 
-  back:
-    image: "jackavery-web-back:latest"
-    restart: unless-stopped
-    volumes:
-      - ./back/config.yml:/app/config.yml:ro
-    ports:
-      - 8000:8000
+  # back:
+  #   image: "jackavery-web-back:latest"
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./back/config.yml:/app/config.yml:ro
+  #   ports:
+  #     - 8000:8000
 
   certbot:
     image: "certbot/certbot:arm32v6-latest"
