--- a/roles/deploy/files/nginx.conf
+++ b/roles/deploy/files/nginx.conf
@@ -10,22 +10,19 @@ server {
     }
 
     # Redirect everything else to https
-    return 301 https://$host$request_uri;
+    return 302 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-
     server_name jackavery.ca;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/jackavery.ca/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/jackavery.ca/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    add_header X-Frame-Options "ALLOW-FROM youtube.com";
-    add_header Content-Security-Policy "frame-ancestors youtube.com";
+    # add_header X-Frame-Options "ALLOW-FROM youtube.com";
+    # add_header Content-Security-Policy "frame-ancestors youtube.com";
 
     root /usr/share/nginx/html;
 
@@ -38,14 +35,14 @@ server {
     }
 
     # rocket.rs API on 8000 on same machine as front-end
-    location /api/ {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://back:8000$request_uri;
-    }
+    # location /api/ {
+    #     resolver 127.0.0.11 ipv6=off;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $remote_addr;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     proxy_pass http://back:8000$request_uri;
+    # }
 
     error_page 404 /404.html;
 }
